--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 /* font-family: 'Montserrat', sans-serif; font-family: 'Libre Baskerville', serif */
 
+.container{
+    margin: 0px 100px;
+    background-color: rgb(206, 206, 206) ;
+    height: 1000px;
+    border: 4px solid darkgrey;
+    border-radius: 1%;
+}
 
 header{
     display: inline;
@@ -7,31 +14,32 @@ header{
 
 header img {
     float: left;
-    margin-right: 30px;
 }
 
 body{
-    margin: 50px;
-    background-image: url ("img/asphalt.jpg");
+    background-image: url(../images/asphalt.jpg);
     background-repeat: repeat;
-
+    
 }
 
 h1 {
     font-family:'Libre Baskerville', serif;
-    color: orange;
+    color:black;
     font-size: 36px;
-    font-weight: bolder;
+    font-weight: 700;
     text-align: center;
-    margin-bottom: 40px;
+    padding: 100px 0px;
+    line-height: 1.5;
 }
 
 p {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    color: #000000;
 
 }
 
 .small {
-    width: 380px;
+    width: 350px;
+    padding: 30px;
 }
