--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,36 @@
-/* font-family: 'Montserrat', sans-serif; font-family: 'Libre Baskerville', serif */
+/* font-family: 'Montserrat', sans-serif; font-family: 'Libre Baskerville', serif 
+Logo Green = #005810 font-family: Buena Park JF, regular*/
 
 .container{
-    margin: 0px 100px;
+    margin: 0px 30px;
     background-color: rgb(206, 206, 206) ;
     height: 1000px;
-    border: 4px solid darkgrey;
+    border: 4px solid darkgray;
     border-radius: 1%;
 }
 
-header{
-    display: inline;
+.small {
+    width: 275px;
+    padding: 30px;
 }
 
-header img {
-    float: left;
+.icon {
+    width: 15px;
+    float: right;
+}
+header{
+    display: inline-flex;
+    align-content: space-around;
+    width: 100%;
+    margin-top: 30px;
+}
+
+#logo {
+    border: 4px solid darkgray;
+    border-radius: 5%;
+    height: 150px;
+    margin: 0px 50px 0px 30px;
+
 }
 
 body{
@@ -25,21 +42,54 @@ body{
 h1 {
     font-family:'Libre Baskerville', serif;
     color:black;
-    font-size: 36px;
+    font-size: 40px;
     font-weight: 700;
+    padding: 60px 0px 0px 0px;
+    line-height: 1.5;
+    
+}
+
+button {
+    font-family:'Libre Baskerville', serif;
+    color: darkgray;
+    width: 150px;
+    height: 40px;
+    font-size: 12px;
+    border-radius: 2%;
+    border: 1px solid darkgray;
+    text-align: left;
+    padding: 10px;  
+}
+
+/* fix postiioning*/
+#search-button{
+    margin-left: 150px;
+    align-items: flex-start;
+    justify-items: flex-end;
+}
+
+hr {
+    width: 65%;
+    margin: -30px 0px 0px 250px;
+}
+
+main {
+    margin-top: 100px;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    color: #000000;
+    margin: 60px 0px;
     text-align: center;
-    padding: 100px 0px;
     line-height: 1.5;
 }
 
-p {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    color: #000000;
-
+#product-display {
+    text-align: center;
 }
 
-.small {
-    width: 350px;
-    padding: 30px;
+#text-explain{
+   text-align: center;
 }
