--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@ Logo Green = #005810 font-family: Buena Park JF, regular*/
 
 .small {
     width: 275px;
-    padding: 30px;
+    margin: 30px 15px;
+    border: 2px solid #005810;
 }
 
 .icon {
@@ -20,16 +21,19 @@ Logo Green = #005810 font-family: Buena Park JF, regular*/
 }
 header{
     display: inline-flex;
-    align-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
-    margin-top: 30px;
+    margin-top: 0px;
+    text-align: center;
 }
 
+
 #logo {
+    float: left;
     border: 4px solid darkgray;
     border-radius: 5%;
     height: 150px;
-    margin: 0px 50px 0px 30px;
+    margin: 30px;
 
 }
 
@@ -44,7 +48,7 @@ h1 {
     color:black;
     font-size: 40px;
     font-weight: 700;
-    padding: 60px 0px 0px 0px;
+    margin-top: -150px;
     line-height: 1.5;
     
 }
@@ -61,16 +65,15 @@ button {
     padding: 10px;  
 }
 
-/* fix postiioning*/
 #search-button{
-    margin-left: 150px;
-    align-items: flex-start;
-    justify-items: flex-end;
+    float: right;
+    margin: 10px 10px 0px;
+    width: 200px;
 }
 
 hr {
     width: 65%;
-    margin: -30px 0px 0px 250px;
+    margin: -80px 0px 0px 250px;
 }
 
 main {
@@ -92,4 +95,9 @@ h3 {
 
 #text-explain{
    text-align: center;
+}
+
+#text-explain button {
+    margin: 0px 80px;
+    text-align:center;
 }
