--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 Logo Green = #005810 font-family: Buena Park JF, regular*/
 
 .container{
-    margin: 0px 30px;
+    margin: 30px;
     background-color: rgb(206, 206, 206) ;
     height: 1000px;
     border: 4px solid darkgray;
@@ -100,4 +100,9 @@ h3 {
 #text-explain button {
     margin: 0px 80px;
     text-align:center;
+}
+
+#text-explain hr {
+    margin: 0px 0px 0px 100px;
+    width:80%
 }
