--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ Logo Green = #005810 font-family: Buena Park JF, regular*/
     width: 275px;
     margin: 30px 15px;
     border: 2px solid #005810;
+    border-radius: 3%;
 }
 
 .icon {
@@ -101,6 +102,11 @@ h3 {
 #text-explain button {
     margin: 0px 80px;
     text-align:center;
+}
+
+#text-explain button:hover {
+    background-color: #005810;
+    color: white;
 }
 
 #text-explain hr {
