--- a/css/styles.css
+++ b/css/styles.css
@@ -39,16 +39,16 @@ header{
 }
 
 body{
-    background-image: url(../images/asphalt.jpg);
+    background-image: url(../assets/asphalt.jpg);
     background-repeat: repeat;
     
 }
 
 h1 {
-    font-family:'Libre Baskerville', serif;
-    color:black;
-    font-size: 40px;
+    font-family: 'Libre Baskerville', serif;
     font-weight: 700;
+    color:black;
+    font-size: 45px;
     margin-top: -150px;
     line-height: 1.5;
     
@@ -74,7 +74,7 @@ button {
 
 hr {
     width: 65%;
-    margin: -80px 0px 0px 250px;
+    margin: -80px 0px 0px 225px;
 }
 
 main {
@@ -86,7 +86,7 @@ h3 {
     font-size: 18px;
     font-weight: 600;
     color: #005810;
-    margin: 60px 0px;
+    margin: 60px 0px 30px;
     text-align: center;
     line-height: 1.5;
 }
@@ -110,6 +110,23 @@ h3 {
 }
 
 #text-explain hr {
-    margin: 0px 0px 0px 100px;
+    margin: 0px 0px 0px 80px;
     width:80%
 }
+
+#product-display {
+    animation-duration: 1s;
+    animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%; 
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
