--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,9 @@ Logo Green = #005810 font-family: Buena Park JF, regular*/
 }
 
 .small {
-    max-width: 275px;
-    max-height: 250px;
-    margin: 30px 15px;
+    max-width: 210px;
+    max-height: 210px;
+    margin: 20px 15px;
     border: 2px solid #005810;
     border-radius: 3%;
 }
@@ -20,6 +20,8 @@ Logo Green = #005810 font-family: Buena Park JF, regular*/
     width: 15px;
     float: right;
 }
+
+
 header{
     display: inline-flex;
     justify-content: space-evenly;
@@ -96,18 +98,23 @@ hr {
     }
 }
 
-/* #click-boxes button {
-    margin: 0px 100px 0px 130px;
-    text-align:center;
-}
- */
-#procuct-display:hover {
-    background-color: #005810;
-    color: white;
-}
+
+
+
 
 #text-explain{
     text-align: center;
+}
+
+h4{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    text-decoration:underline;
+    color: #005810;
+    margin: 30px 0px 30px;
+    text-align: center;
+    line-height: 1.5;
 }
 
 #text-explain hr, footer hr {
@@ -124,7 +131,6 @@ h3 {
     text-align: center;
     line-height: 1.5;
 }
-
 
 
   footer {
