--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ header{
     float: left;
     border: 4px solid darkgray;
     border-radius: 5%;
-    height: 150px;
+    height: 100px;
     margin: 30px;
 
 }
@@ -51,7 +51,7 @@ h1 {
     font-weight: 700;
     color:black;
     font-size: 36px;
-    margin-top: -150px;
+    margin-top: -130px;
     line-height: 1.5;
     
 }
@@ -129,7 +129,14 @@ h3 {
 }
 
 
-/* style results */
+#results{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    color: #005810;
+    margin: 60px 0px 30px 150px;
+    line-height: 2;
+}
 
   footer {
       margin: 50px 0px 10px;
@@ -139,4 +146,34 @@ h3 {
       padding: 20px 100px;
   }
 
-  /* add media queries */
+  /* add media query for tablet size */
+@media screen and (max-width: 992px) {
+    h1 {
+      font-size: 24px;
+      margin-top: -110px;
+    }
+    #logo{
+        height: 80px;
+    }
+
+    hr {
+        width: 65%;
+        margin: -80px 0px 0px 105px;
+    }
+
+    #search-button{
+        float: right;
+        margin: 10px 10px 0px;
+        width: 150px;
+    }
+
+    .small {
+        max-width: 125px;
+        max-height: 125px;
+        margin: 20px 15px;
+        border: 2px solid #005810;
+        border-radius: 3%;
+    }
+    
+  }
+  
