--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ h3 {
 @media screen and (max-width: 992px) {
     h1 {
       font-size: 24px;
-      margin-top: -110px;
+      margin: -110px;
     }
     #logo{
         height: 80px;
@@ -158,7 +158,7 @@ h3 {
 
     hr {
         width: 65%;
-        margin: -80px 0px 0px 105px;
+        margin: -65px 0px 0px 105px;
     }
 
     #search-button{
