--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ header{
     border: 4px solid darkgray;
     border-radius: 5%;
     height: 100px;
-    margin: 30px;
+    margin: 30px 30px 0px 30px;
 
 }
 
@@ -74,9 +74,36 @@ button {
     width: 200px;
 }
 
+#refresh {
+    text-align: center;
+    margin: 0px 40px;
+}
+
+#refresh-button{
+    width: 100px;
+    padding: 0px;
+    border-radius: 50%;    
+    border: 2px solid #005810;
+    float: left;
+    text-align: center;
+    background-color: whitesmoke;
+}
+
+#refresh :hover{
+    background-color: #005810;
+    color: whitesmoke;
+}
+
+a{
+    font-family:'Libre Baskerville', serif;
+    color: #005810;
+    text-decoration: none;
+    
+}
+
 hr {
     width: 65%;
-    margin: -80px 0px 0px 225px;
+    margin: -60px 0px 0px 225px;
 }
 
 #product-display {
